# minizero

./: .autopep8  .clang-format  .gitignore  CMakeLists.txt  README.md
.githooks/: pre-commit
docker/: Dockerfile
docs/: Console.md  Development.md  Evaluation.md  Setup.md  Testing.md  Training.md
killallgo_solver/: CMakeLists.txt  killallgo_actor.cpp  killallgo_actor.h  killallgo_actor_group.cpp  killallgo_actor_group.h  killallgo_configuration.cpp  killallgo_mcts.cpp  (+6 more)
minizero/environment/: CMakeLists.txt  environment.cpp  environment.h
minizero/environment/amazons/: amazons.cpp  amazons.h
minizero/environment/atari/: atari.cpp  atari.h  obs_recover.cpp  obs_recover.h  obs_remover.cpp  obs_remover.h
minizero/environment/base/: base_env.cpp  base_env.h  color_message.h
minizero/environment/breakthrough/: breakthrough.cpp  breakthrough.h
minizero/environment/chess/: bitboard.h  chess.cpp  chess.h
minizero/environment/clobber/: clobber.cpp  clobber.h
minizero/environment/conhex/: conhex.cpp  conhex.h  conhex_graph.cpp  conhex_graph.h  conhex_graph_cell.cpp  conhex_graph_cell.h  conhex_graph_flag.h  disjoint_set_union.cpp  disjoint_set_union.h
minizero/environment/connect6/: connect6.cpp  connect6.h
minizero/environment/dotsandboxes/: dotsandboxes.cpp  dotsandboxes.h
minizero/environment/go/: go.cpp  go.h  go_area.h  go_benson.h  go_block.h  go_data_structure_check.cpp  go_grid.h  go_unit.h
minizero/environment/gomoku/: gomoku.cpp  gomoku.h
minizero/environment/havannah/: havannah.cpp  havannah.h
minizero/environment/hex/: hex.cpp  hex.h
minizero/environment/killallgo/: killallgo.cpp  killallgo.h  killallgo_7x7_bitboard.h  killallgo_rzone.cpp  killallgo_seki_7x7.cpp  killallgo_seki_7x7.h
minizero/environment/linesofaction/: linesofaction.cpp  linesofaction.h
minizero/environment/nogo/: nogo.h
minizero/environment/othello/: othello.cpp  othello.h
minizero/environment/rubiks/: rubiks.cpp  rubiks.h
minizero/environment/santorini/: bitboard.h  board.cpp  board.h  santorini.cpp  santorini.h
minizero/environment/stochastic/: stochastic_env.h
minizero/environment/stochastic/puzzle2048/: bitboard.h  puzzle2048.cpp  puzzle2048.h
minizero/environment/stochastic/tetris/: board.h  tetris.cpp  tetris.h
minizero/environment/stochastic/tetrisblockpuzzle/: bitboard.h  tetrisblockpuzzle.cpp  tetrisblockpuzzle.h
minizero/environment/surakarta/: surakarta.cpp  surakarta.h
minizero/environment/tictactoe/: tictactoe.cpp  tictactoe.h
minizero/environment/tietactoe/: tietactoe.cpp  tietactoe.h
minizero/learner/: CMakeLists.txt  data_loader.cpp  data_loader.h  pybind.cpp  train.py
(+111 files in other folders)
